[project]
name = "lang-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[google-genai]>=1.3.11",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "load-dotenv>=0.1.0",
    "pymongo>=4.16.0",
]
